*SVN*

* Added that Active Record associations are now reloaded instead of cleared to work with the new const_missing hook in Active Record.

* Added graceful handling of an inaccessible log file by redirecting output to STDERR with a warning #330 [rainmkr]

* Added support for a -h/--help parameter in the generator #331 [Ulysses]

* File.expand_path in config/environment.rb would fail when dealing with symlinked public directories [mjobin]


*0.9.1*

* Upgraded to Action Pack 1.0.1 for important bug fix

* Updated gem dependencies


*0.9.0*

* Renamed public/dispatch.servlet to script/server -- it wasn't really dispatching anyway as its delegating calls to public/dispatch.rb

* Renamed AbstractApplicationController and abstract_application.rb to ApplicationController and application.rb, so that it will be possible
  for the framework to automatically pick up on app/views/layouts/application.rhtml and app/helpers/application.rb

* Added script/console that makes it even easier to start an IRB session for interacting with the domain model. Run with no-args to
  see help.

* Added breakpoint support through the script/breakpointer client. This means that you can break out of execution at any point in
  the code, investigate and change the model, AND then resume execution! Example:
  
    class WeblogController < ActionController::Base
      def index
        @posts = Post.find_all
        breakpoint "Breaking out from the list"
      end
    end
    
  So the controller will accept the action, run the first line, then present you with a IRB prompt in the breakpointer window. 
  Here you can do things like:
  
  Executing breakpoint "Breaking out from the list" at .../webrick_server.rb:16 in 'breakpoint'

    >> @posts.inspect
    => "[#<Post:0x14a6be8 @attributes={\"title\"=>nil, \"body\"=>nil, \"id\"=>\"1\"}>, 
         #<Post:0x14a6620 @attributes={\"title\"=>\"Rails you know!\", \"body\"=>\"Only ten..\", \"id\"=>\"2\"}>]"